--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "vite": "^5.0.10"
+  },
+  "dependencies": {
+      "feather-icons": "^4.29.1",
+      "save": "^2.9.0"
   }
 }
